--- a/papers/papers/index.html
+++ b/papers/papers/index.html
@@ -221,7 +221,7 @@
  
   
     
-      <li data-nav-id="/papers/papers/" title="List" class="dd-item active href="/papers/papers/"">
+      <li data-nav-id="/papers/papers/" title="List" class="dd-item active" href="/papers/papers/">
     </li>
      
   
